--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" href="./src/css/style.css">
 </head>
 <body>
-  Hello World!
+  <h2>hello world</h2>
 </body>
 
 <script src="./src/js/script.js"></script>
