--- a/index.html
+++ b/index.html
@@ -8,9 +8,7 @@
   <link rel="stylesheet" href="./src/css/reset.css">
   <link rel="stylesheet" href="./src/css/style.css">
 </head>
-<body>
-  <h2>hello world</h2>
-</body>
+<body></body>
 
 <script src="./src/js/script.js"></script>
 </html>
