Adicionando hover e eventos para abrir o menu

--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
 </head>
 <body>
 
+  <!-- Tag par SEO -->
+  <h1 style="display: none">BMW: Qualidade, Segurança e Estilo Moderno</h1>
+
   <!-- inicio do header  -->
   <header id="header" class="header">
     <div class="container">
@@ -63,19 +66,19 @@
                 <menuitem class="header__menuitem" label="8">
                   <a href="#">8</a>
                 </menuitem> 
-                <menuitem class="header__menuitem" label="8">
+                <menuitem class="header__menuitem" label="x">
                   <a href="#">x</a>
                 </menuitem> 
-                <menuitem class="header__menuitem" label="8">
+                <menuitem class="header__menuitem" label="z">
                   <a href="#">z</a>
                 </menuitem> 
-                <menuitem class="header__menuitem" label="8">
+                <menuitem class="header__menuitem" label="m">
                   <a href="#">m</a>
                 </menuitem> 
-                <menuitem class="header__menuitem" label="8">
+                <menuitem class="header__menuitem" label="i">
                   <a href="#">i</a>
                 </menuitem>   
-                <menuitem class="header__menuitem" label="8">
+                <menuitem class="header__menuitem" label="hybrid">
                   <a href="#">Plug-in-Hybrid</a>
                 </menuitem> 
               </menu>
@@ -90,6 +93,102 @@
     </div>
     <div class="header__button-fixed">
       <button>Solicite uma cotação</button>
+    </div>
+
+    <div id="dropdown-gallery" class="dropdown-gallery">
+      <div class="container">
+        <div class="splide gallery-dropdown-splide" aria-label="BMW">
+          <div class="splide__track">
+            <ul class="splide__list">
+              <li class="splide__slide">
+                <figure class="showcase__figure">
+                  <img src="/src/imgs/veiculos/serie1.png" alt="carro">
+                  <figcaption>
+                    <h3 class="showcase__nome">BMW Série 1</h3>
+                  </figcaption>
+                </figure>
+                <div class="showcase__share">
+                  <span>Compartilhe:</span>
+                  <a href="#">
+                    <i class="fontello icon-facebook">&#xe808;</i>
+                  </a>
+                  <a href="#">
+                  <i class="fontello icon-whatsapp">&#xe805;</i>
+                  </a>
+                </div>
+              </li>
+              <li class="splide__slide">
+                <figure class="showcase__figure">
+                  <img src="/src/imgs/veiculos/serie1.png" alt="carro">
+                  <figcaption>
+                    <h3 class="showcase__nome">BMW Série 1</h3>
+                  </figcaption>
+                </figure>
+                <div class="showcase__share">
+                  <span>Compartilhe:</span>
+                  <a href="#">
+                    <i class="fontello icon-facebook">&#xe808;</i>
+                  </a>
+                  <a href="#">
+                  <i class="fontello icon-whatsapp">&#xe805;</i>
+                  </a>
+                </div>
+              </li>
+              <li class="splide__slide">
+                <figure class="showcase__figure">
+                  <img src="/src/imgs/veiculos/serie1.png" alt="carro">
+                  <figcaption>
+                    <h3 class="showcase__nome">BMW Série 1</h3>
+                  </figcaption>
+                </figure>
+                <div class="showcase__share">
+                  <span>Compartilhe:</span>
+                  <a href="#">
+                    <i class="fontello icon-facebook">&#xe808;</i>
+                  </a>
+                  <a href="#">
+                  <i class="fontello icon-whatsapp">&#xe805;</i>
+                  </a>
+                </div>
+              </li>
+              <li class="splide__slide">
+                <figure class="showcase__figure">
+                  <img src="/src/imgs/veiculos/serie1.png" alt="carro">
+                  <figcaption>
+                    <h3 class="showcase__nome">BMW Série 1</h3>
+                  </figcaption>
+                </figure>
+                <div class="showcase__share">
+                  <span>Compartilhe:</span>
+                  <a href="#">
+                    <i class="fontello icon-facebook">&#xe808;</i>
+                  </a>
+                  <a href="#">
+                  <i class="fontello icon-whatsapp">&#xe805;</i>
+                  </a>
+                </div>
+              </li>
+              <li class="splide__slide">
+                <figure class="showcase__figure">
+                  <img src="/src/imgs/veiculos/serie1.png" alt="carro">
+                  <figcaption>
+                    <h3 class="showcase__nome">BMW Série 1</h3>
+                  </figcaption>
+                </figure>
+                <div class="showcase__share">
+                  <span>Compartilhe:</span>
+                  <a href="#">
+                    <i class="fontello icon-facebook">&#xe808;</i>
+                  </a>
+                  <a href="#">
+                  <i class="fontello icon-whatsapp">&#xe805;</i>
+                  </a>
+                </div>
+              </li>
+            </ul>
+          </div>
+        </div>     
+      </div>
     </div>
   </header>
   <!-- fim do header -->
@@ -143,7 +242,9 @@
           <div class="showcase__item">
             <figure class="showcase__figure">
               <img src="/src/imgs/veiculos/serie1.png" alt="carro">
-              <figcaption class="showcase__titulo">BMW Série 1</figcaption>
+              <figcaption>
+                <h3 class="showcase__nome">BMW Série 1</h3>
+              </figcaption>
             </figure>
             <div class="showcase__buttons">
               <div class="showcase__button--cotacao">Cotação</div>
@@ -164,7 +265,9 @@
           <div class="showcase__item">
             <figure class="showcase__figure">
               <img src="/src/imgs/veiculos/serie1.png" alt="carro">
-              <figcaption class="showcase__titulo">BMW Série 1</figcaption>
+              <figcaption>
+                <h3 class="showcase__nome">BMW Série 1</h3>
+              </figcaption>
             </figure>
             <div class="showcase__buttons">
               <div class="showcase__button--cotacao">Cotação</div>
@@ -185,7 +288,9 @@
           <div class="showcase__item">
             <figure class="showcase__figure">
               <img src="/src/imgs/veiculos/serie1.png" alt="carro">
-              <figcaption class="showcase__titulo">BMW Série 1</figcaption>
+              <figcaption>
+                <h3 class="showcase__nome">BMW Série 1</h3>
+              </figcaption>
             </figure>
             <div class="showcase__buttons">
               <div class="showcase__button--cotacao">Cotação</div>
@@ -206,7 +311,9 @@
           <div class="showcase__item">
             <figure class="showcase__figure">
               <img src="/src/imgs/veiculos/serie1.png" alt="carro">
-              <figcaption class="showcase__titulo">BMW Série 1</figcaption>
+              <figcaption>
+                <h3 class="showcase__nome">BMW Série 1</h3>
+              </figcaption>
             </figure>
             <div class="showcase__buttons">
               <div class="showcase__button--cotacao">Cotação</div>
@@ -227,7 +334,9 @@
           <div class="showcase__item">
             <figure class="showcase__figure">
               <img src="/src/imgs/veiculos/serie1.png" alt="carro">
-              <figcaption class="showcase__titulo">BMW Série 1</figcaption>
+              <figcaption>
+                <h3 class="showcase__nome">BMW Série 1</h3>
+              </figcaption>
             </figure>
             <div class="showcase__buttons">
               <div class="showcase__button--cotacao">Cotação</div>
@@ -248,7 +357,9 @@
           <div class="showcase__item">
             <figure class="showcase__figure">
               <img src="/src/imgs/veiculos/serie1.png" alt="carro">
-              <figcaption class="showcase__titulo">BMW Série 1</figcaption>
+              <figcaption>
+                <h3 class="showcase__nome">BMW Série 1</h3>
+              </figcaption>
             </figure>
             <div class="showcase__buttons">
               <div class="showcase__button--cotacao">Cotação</div>
@@ -269,7 +380,9 @@
           <div class="showcase__item">
             <figure class="showcase__figure">
               <img src="/src/imgs/veiculos/serie1.png" alt="carro">
-              <figcaption class="showcase__titulo">BMW Série 1</figcaption>
+              <figcaption>
+                <h3 class="showcase__nome">BMW Série 1</h3>
+              </figcaption>
             </figure>
             <div class="showcase__buttons">
               <div class="showcase__button--cotacao">Cotação</div>
@@ -290,7 +403,9 @@
           <div class="showcase__item">
             <figure class="showcase__figure">
               <img src="/src/imgs/veiculos/serie1.png" alt="carro">
-              <figcaption class="showcase__titulo">BMW Série 1</figcaption>
+              <figcaption>
+                <h3 class="showcase__nome">BMW Série 1</h3>
+              </figcaption>
             </figure>
             <div class="showcase__buttons">
               <div class="showcase__button--cotacao">Cotação</div>
