Ajustes gerais de layout

--- a/index.html
+++ b/index.html
@@ -119,9 +119,9 @@
               </li>
               <li class="splide__slide">
                 <figure class="showcase__figure">
-                  <img src="/src/imgs/veiculos/serie1.png" alt="carro">
+                  <img src="/src/imgs/veiculos/m3.png" alt="carro">
                   <figcaption>
-                    <h3 class="showcase__nome">BMW Série 1</h3>
+                    <h3 class="showcase__nome">BMW M3</h3>
                   </figcaption>
                 </figure>
                 <div class="showcase__share">
@@ -136,9 +136,9 @@
               </li>
               <li class="splide__slide">
                 <figure class="showcase__figure">
-                  <img src="/src/imgs/veiculos/serie1.png" alt="carro">
+                  <img src="/src/imgs/veiculos/m5.png" alt="carro">
                   <figcaption>
-                    <h3 class="showcase__nome">BMW Série 1</h3>
+                    <h3 class="showcase__nome">BMW M5</h3>
                   </figcaption>
                 </figure>
                 <div class="showcase__share">
@@ -153,9 +153,9 @@
               </li>
               <li class="splide__slide">
                 <figure class="showcase__figure">
-                  <img src="/src/imgs/veiculos/serie1.png" alt="carro">
+                  <img src="/src/imgs/veiculos/serie2.png" alt="carro">
                   <figcaption>
-                    <h3 class="showcase__nome">BMW Série 1</h3>
+                    <h3 class="showcase__nome">BMW Série 2</h3>
                   </figcaption>
                 </figure>
                 <div class="showcase__share">
@@ -170,9 +170,9 @@
               </li>
               <li class="splide__slide">
                 <figure class="showcase__figure">
-                  <img src="/src/imgs/veiculos/serie1.png" alt="carro">
+                  <img src="/src/imgs/veiculos/serie3.png" alt="carro">
                   <figcaption>
-                    <h3 class="showcase__nome">BMW Série 1</h3>
+                    <h3 class="showcase__nome">BMW Série 3</h3>
                   </figcaption>
                 </figure>
                 <div class="showcase__share">
@@ -264,9 +264,9 @@
           <!-- Item -->
           <div class="showcase__item">
             <figure class="showcase__figure">
-              <img src="/src/imgs/veiculos/serie1.png" alt="carro">
+              <img src="/src/imgs/veiculos/serie2.png" alt="carro">
               <figcaption>
-                <h3 class="showcase__nome">BMW Série 1</h3>
+                <h3 class="showcase__nome">BMW Série 2</h3>
               </figcaption>
             </figure>
             <div class="showcase__buttons">
@@ -287,9 +287,9 @@
           <!-- Item -->
           <div class="showcase__item">
             <figure class="showcase__figure">
-              <img src="/src/imgs/veiculos/serie1.png" alt="carro">
+              <img src="/src/imgs/veiculos/serie3.png" alt="carro">
               <figcaption>
-                <h3 class="showcase__nome">BMW Série 1</h3>
+                <h3 class="showcase__nome">BMW Série 3</h3>
               </figcaption>
             </figure>
             <div class="showcase__buttons">
@@ -310,9 +310,9 @@
           <!-- Item -->
           <div class="showcase__item">
             <figure class="showcase__figure">
-              <img src="/src/imgs/veiculos/serie1.png" alt="carro">
+              <img src="/src/imgs/veiculos/serie4.png" alt="carro">
               <figcaption>
-                <h3 class="showcase__nome">BMW Série 1</h3>
+                <h3 class="showcase__nome">BMW Série 4</h3>
               </figcaption>
             </figure>
             <div class="showcase__buttons">
@@ -333,9 +333,9 @@
           <!-- Item -->
           <div class="showcase__item">
             <figure class="showcase__figure">
-              <img src="/src/imgs/veiculos/serie1.png" alt="carro">
+              <img src="/src/imgs/veiculos/x2.png" alt="carro">
               <figcaption>
-                <h3 class="showcase__nome">BMW Série 1</h3>
+                <h3 class="showcase__nome">BMW X2</h3>
               </figcaption>
             </figure>
             <div class="showcase__buttons">
@@ -356,9 +356,9 @@
           <!-- Item -->
           <div class="showcase__item">
             <figure class="showcase__figure">
-              <img src="/src/imgs/veiculos/serie1.png" alt="carro">
+              <img src="/src/imgs/veiculos/z4.png" alt="carro">
               <figcaption>
-                <h3 class="showcase__nome">BMW Série 1</h3>
+                <h3 class="showcase__nome">BMW Z4</h3>
               </figcaption>
             </figure>
             <div class="showcase__buttons">
@@ -379,9 +379,9 @@
           <!-- Item -->
           <div class="showcase__item">
             <figure class="showcase__figure">
-              <img src="/src/imgs/veiculos/serie1.png" alt="carro">
+              <img src="/src/imgs/veiculos/m3.png" alt="carro">
               <figcaption>
-                <h3 class="showcase__nome">BMW Série 1</h3>
+                <h3 class="showcase__nome">BMW M3</h3>
               </figcaption>
             </figure>
             <div class="showcase__buttons">
@@ -402,9 +402,9 @@
           <!-- Item -->
           <div class="showcase__item">
             <figure class="showcase__figure">
-              <img src="/src/imgs/veiculos/serie1.png" alt="carro">
+              <img src="/src/imgs/veiculos/m5.png" alt="carro">
               <figcaption>
-                <h3 class="showcase__nome">BMW Série 1</h3>
+                <h3 class="showcase__nome">BMW M5</h3>
               </figcaption>
             </figure>
             <div class="showcase__buttons">
