--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>BMW: Qualidade, Segurança e Estilo Moderno</title>
-  <meta description="A BMW oferece qualidade superior, segurança incomparável e estilo moderno em todos os seus veículos. Venha nos visitar e experimente o melhor em automóveis.">
+  <meta name="description" content="A BMW oferece qualidade superior, segurança incomparável e estilo moderno em todos os seus veículos. Venha nos visitar e experimente o melhor em automóveis.">
   
   <link rel="stylesheet" href="./src/css/reset.css">
   <link rel="stylesheet" href="./src/css/lib/splide.min.css">
