--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
         </div>
         <div class="header__logo">
           <a href="/">
-            <img src="/src/imgs/logos/logo-bmw-rio.svg" alt="BMW Rio">
+            <img src="src/imgs/logos/logo-bmw-rio.svg" alt="BMW Rio">
           </a>
         </div>
       </div>
@@ -102,7 +102,7 @@
             <ul class="splide__list">
               <li class="splide__slide">
                 <figure class="showcase__figure">
-                  <img src="/src/imgs/veiculos/serie1.png" alt="carro">
+                  <img src="src/imgs/veiculos/serie1.png" alt="carro">
                   <figcaption>
                     <h3 class="showcase__nome">BMW Série 1</h3>
                   </figcaption>
@@ -119,7 +119,7 @@
               </li>
               <li class="splide__slide">
                 <figure class="showcase__figure">
-                  <img src="/src/imgs/veiculos/m3.png" alt="carro">
+                  <img src="src/imgs/veiculos/m3.png" alt="carro">
                   <figcaption>
                     <h3 class="showcase__nome">BMW M3</h3>
                   </figcaption>
@@ -136,7 +136,7 @@
               </li>
               <li class="splide__slide">
                 <figure class="showcase__figure">
-                  <img src="/src/imgs/veiculos/m5.png" alt="carro">
+                  <img src="src/imgs/veiculos/m5.png" alt="carro">
                   <figcaption>
                     <h3 class="showcase__nome">BMW M5</h3>
                   </figcaption>
@@ -153,7 +153,7 @@
               </li>
               <li class="splide__slide">
                 <figure class="showcase__figure">
-                  <img src="/src/imgs/veiculos/serie2.png" alt="carro">
+                  <img src="src/imgs/veiculos/serie2.png" alt="carro">
                   <figcaption>
                     <h3 class="showcase__nome">BMW Série 2</h3>
                   </figcaption>
@@ -170,7 +170,7 @@
               </li>
               <li class="splide__slide">
                 <figure class="showcase__figure">
-                  <img src="/src/imgs/veiculos/serie3.png" alt="carro">
+                  <img src="src/imgs/veiculos/serie3.png" alt="carro">
                   <figcaption>
                     <h3 class="showcase__nome">BMW Série 3</h3>
                   </figcaption>
@@ -202,13 +202,13 @@
         <div class="splide__track">
           <ul class="splide__list">
             <li class="splide__slide">
-              <img src="/src/imgs/banners/mobile-banner.png" alt="BMW Rio">
+              <img src="src/imgs/banners/mobile-banner.png" alt="BMW Rio">
             </li>
             <li class="splide__slide">
-              <img src="/src/imgs/banners/mobile-banner.png" alt="BMW Rio">
+              <img src="src/imgs/banners/mobile-banner.png" alt="BMW Rio">
             </li>
             <li class="splide__slide">
-              <img src="/src/imgs/banners/mobile-banner.png" alt="BMW Rio">
+              <img src="src/imgs/banners/mobile-banner.png" alt="BMW Rio">
             </li>
           </ul>
         </div>
@@ -217,13 +217,13 @@
         <div class="splide__track">
           <ul class="splide__list">
             <li class="splide__slide">
-              <img src="/src/imgs/banners/desktop-banner.jpg" alt="BMW Rio">
+              <img src="src/imgs/banners/desktop-banner.jpg" alt="BMW Rio">
             </li>
             <li class="splide__slide">
-              <img src="/src/imgs/banners/desktop-banner.jpg" alt="BMW Rio">
+              <img src="src/imgs/banners/desktop-banner.jpg" alt="BMW Rio">
             </li>
             <li class="splide__slide">
-              <img src="/src/imgs/banners/desktop-banner.jpg" alt="BMW Rio">
+              <img src="src/imgs/banners/desktop-banner.jpg" alt="BMW Rio">
             </li>
           </ul>
         </div>
@@ -241,7 +241,7 @@
           <!-- Item -->
           <div class="showcase__item">
             <figure class="showcase__figure">
-              <img src="/src/imgs/veiculos/serie1.png" alt="carro">
+              <img src="src/imgs/veiculos/serie1.png" alt="carro">
               <figcaption>
                 <h3 class="showcase__nome">BMW Série 1</h3>
               </figcaption>
@@ -264,7 +264,7 @@
           <!-- Item -->
           <div class="showcase__item">
             <figure class="showcase__figure">
-              <img src="/src/imgs/veiculos/serie2.png" alt="carro">
+              <img src="src/imgs/veiculos/serie2.png" alt="carro">
               <figcaption>
                 <h3 class="showcase__nome">BMW Série 2</h3>
               </figcaption>
@@ -287,7 +287,7 @@
           <!-- Item -->
           <div class="showcase__item">
             <figure class="showcase__figure">
-              <img src="/src/imgs/veiculos/serie3.png" alt="carro">
+              <img src="src/imgs/veiculos/serie3.png" alt="carro">
               <figcaption>
                 <h3 class="showcase__nome">BMW Série 3</h3>
               </figcaption>
@@ -310,7 +310,7 @@
           <!-- Item -->
           <div class="showcase__item">
             <figure class="showcase__figure">
-              <img src="/src/imgs/veiculos/serie4.png" alt="carro">
+              <img src="src/imgs/veiculos/serie4.png" alt="carro">
               <figcaption>
                 <h3 class="showcase__nome">BMW Série 4</h3>
               </figcaption>
@@ -333,7 +333,7 @@
           <!-- Item -->
           <div class="showcase__item">
             <figure class="showcase__figure">
-              <img src="/src/imgs/veiculos/x2.png" alt="carro">
+              <img src="src/imgs/veiculos/x2.png" alt="carro">
               <figcaption>
                 <h3 class="showcase__nome">BMW X2</h3>
               </figcaption>
@@ -356,7 +356,7 @@
           <!-- Item -->
           <div class="showcase__item">
             <figure class="showcase__figure">
-              <img src="/src/imgs/veiculos/z4.png" alt="carro">
+              <img src="src/imgs/veiculos/z4.png" alt="carro">
               <figcaption>
                 <h3 class="showcase__nome">BMW Z4</h3>
               </figcaption>
@@ -379,7 +379,7 @@
           <!-- Item -->
           <div class="showcase__item">
             <figure class="showcase__figure">
-              <img src="/src/imgs/veiculos/m3.png" alt="carro">
+              <img src="src/imgs/veiculos/m3.png" alt="carro">
               <figcaption>
                 <h3 class="showcase__nome">BMW M3</h3>
               </figcaption>
@@ -402,7 +402,7 @@
           <!-- Item -->
           <div class="showcase__item">
             <figure class="showcase__figure">
-              <img src="/src/imgs/veiculos/m5.png" alt="carro">
+              <img src="src/imgs/veiculos/m5.png" alt="carro">
               <figcaption>
                 <h3 class="showcase__nome">BMW M5</h3>
               </figcaption>
@@ -445,7 +445,7 @@
         <div class="footer__sencond-block">
           <div class="footer__logo">
             <a href="/">
-              <img src="/src/imgs/logos/logo-bmw-rio.svg" alt="BMW">
+              <img src="src/imgs/logos/logo-bmw-rio.svg" alt="BMW">
             </a>
           </div>  
           <div class="footer__copyright">
@@ -453,7 +453,7 @@
           </div>  
           <div class="footer__develop">
             <span>Feito por:</span>
-            <img src="/src/imgs/logos/logo-alpes.png" alt="Alpes One">
+            <img src="src/imgs/logos/logo-alpes.png" alt="Alpes One">
           </div>
         </div>
       </div>
